--- a/rotamosquito/docker-compose.yml
+++ b/rotamosquito/docker-compose.yml
@@ -1,16 +1,19 @@
 version: "3.8"
 services:
-    vc-postgres:
+    postgres:
       container_name: rm-postgres
-      image: postgresql:latest
+      image: postgres
       ports:
         - "5432:5432"
       networks:
         - rm-network
+      environment:
+        POSTGRES_PASSWORD: 123
+        POSTGRES_DB: rotamosquito
 
-    rm-backend:
+    backend:
       container_name: rm-backend
-      image: rotamosquito:latest
+      image: rotadomosquito/backend
       ports:
         - "8080:8080"
       networks:
