--- a/rotamosquito/src/main/resources/application.properties
+++ b/rotamosquito/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/rotamosquito
+spring.datasource.url=jdbc:postgresql://rm-postgres:5432/rotamosquito
 spring.datasource.username=postgres
 spring.datasource.password=123
 
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
 
 spring.datasource.hikari.maximum-pool-size=5
 spring.datasource.hikari.minimum-idle=1
