ajustes de url de banco dados

--- a/rotamosquito/src/main/resources/application.properties
+++ b/rotamosquito/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://rm-postgres:5432/rotamosquito
+spring.datasource.url=jdbc:postgresql://localhost:5432/rotamosquito
 spring.datasource.username=postgres
 spring.datasource.password=123
 
