ajustes de parametros de banco por envfile

--- a/rotamosquito/src/main/resources/application.properties
+++ b/rotamosquito/src/main/resources/application.properties
@@ -1,7 +1,9 @@
+spring.config.import=optional:file:.env[.properties]
+
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/rotamosquito
-spring.datasource.username=postgres
-spring.datasource.password=123
+spring.datasource.url=jdbc:postgresql://${DATABASE_URL}
+spring.datasource.username=${DATABASE_USER}
+spring.datasource.password=${DATABASE_PASS}
 
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
