instalacao do swagger

--- a/rotamosquito/src/main/resources/application.properties
+++ b/rotamosquito/src/main/resources/application.properties
@@ -16,3 +16,5 @@ spring.datasource.hikari.max-lifetime=1000
 
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
+
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
